[package]
name = "cone"
version = "0.1.0"
description = "CONE: CPTu Operations and Numerical Exploration."
repository = "https://github.com/ffrancoa/cone"
license = "MIT"
edition = "2024"

[dependencies]
clap        = { version = "4.5.40", features = ["cargo"] }
crossterm   = "0.29.0"
rustyline   = "16.0.0"
