[package]
name        = "cone"
version     = "0.2.0"
description = "CPTu Operations and Numerical Exploration"
repository  = "https://github.com/ffrancoa/cone"
license     = "MIT"
edition     = "2024"

[dependencies]
clap        = { version = "4.5.40", features = ["cargo", "derive"] }
crossterm   = { version = "0.29.0" }
polars      = { version = "0.48.1", features = ["lazy"] }
rustyline   = { version = "16.0.0" }
shlex       = { version = "1.3.0" }
tabled      = { version = "0.20.0" }
